--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "project-x",
   "version": "0.1.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/simonespa/project-x.git"
+  },
+  "author": {
+    "name": "Simone Spaccarotella",
+    "email": "spa.simone@gmail.com",
+    "url": "https://www.linkedin.com/in/simonespaccarotella"
+  },
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/simonespa/project-x/issues"
+  },
+  "homepage": "https://github.com/simonespa/project-x#readme",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
